# spotify-controller

./: .cache  .gitignore  README.md  config.yml  docker-build.cmd  docker-run.cmd  main.py  pyproject.toml  requirements.txt  spotify.py  test.py
database/: db_manager.py
discovery/: artist_tracks_discovery.py
docker/: Dockerfile
examples/: current_user_playlists
generator/: spotify_generator.py
routes/: api.py  generator.py
