[tool.poetry]
name = "spotify-controller"
version = "0.1.0"
description = ""
authors = ["kevim <k.v.n.such@gmail.com>"]
readme = "README.md"
packages = [{include = "spotify_controller"}]

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.3.2"
spotipy = "^2.21.0"
fastapi = "^0.87.0"
fastapi-amis-admin = "^0.4.2"
fastapi-scheduler = "^0.0.11"
pyyaml = "^6.0"
aiosqlite = "^0.17.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
